unpackaged/main/default/objects/Account/fields/PGM_PST_Member__c.field-meta.xml
<CustomField>
    <fullName>PGM_PST_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account is a member of a PST Price Group</description>
    <inlineHelpText>This account is a member of a PSt Price Group</inlineHelpText>
    <label>Member of PST Price Group</label>
    <type>Checkbox</type>
</CustomField>