unpackaged/main/default/objects/Account/fields/PGM_UNI_Member__c.field-meta.xml
<CustomField>
    <fullName>PGM_UNI_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account is a member of a UNI  Price Group</description>
    <inlineHelpText>This account is a member of aUNI Price Group</inlineHelpText>
    <label>Member of UNI Price Group</label>
    <type>Checkbox</type>
</CustomField>