unpackaged/main/default/objects/Account/fields/Prevent_Account_Creation__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Account_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to prevent account creation on lead conversion. Its value is mapped to Lead field with the same name. Lead field value is set in workflow based on Lead Flexicon record type.</description>
    <label>Prevent Account Creation</label>
    <type>Checkbox</type>
</CustomField>