unpackaged/main/default/objects/Account/fields/PrevYearSales__c.field-meta.xml
<CustomField>
    <fullName>PrevYearSales__c</fullName>
    <formula>Customer_Balance__r.prevyearsales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrevYearSales</label>
    <type>Text</type>
</CustomField>