unpackaged/main/default/objects/Account/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <label>Price Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>