unpackaged/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Indicates Primary point of Contact for the Company</description>
    <inlineHelpText>Indicates Primary point of Contact for the Company</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>