unpackaged/main/default/objects/Account/fields/Product_Pricing_Division_Filter__c.field-meta.xml
<CustomField>
    <fullName>Product_Pricing_Division_Filter__c</fullName>
    <description>Used in the background for search filter on QLE</description>
    <label>Product Pricing Division Filter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>