unpackaged/main/default/objects/Account/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor- Ace</fullName>
            </value>
            <value>
                <fullName>Distributor- P3</fullName>
            </value>
            <value>
                <fullName>Distributor- Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>