unpackaged/main/default/objects/Account/fields/proj_BidDate__c.field-meta.xml
<CustomField>
    <fullName>proj_BidDate__c</fullName>
    <label>Bid Date</label>
    <type>Date</type>
</CustomField>