unpackaged/main/default/objects/Account/fields/proj_Project_Value_High__c.field-meta.xml
<CustomField>
    <fullName>proj_Project_Value_High__c</fullName>
    <label>Project Value (High)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>