unpackaged/main/default/objects/Account/fields/proj_Project_Value_Low__c.field-meta.xml
<CustomField>
    <fullName>proj_Project_Value_Low__c</fullName>
    <label>Project Value (Low)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>