unpackaged/main/default/objects/Account/fields/proj_ProjectCategory__c.field-meta.xml
<CustomField>
    <fullName>proj_ProjectCategory__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Powerplant</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Sports Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>