unpackaged/main/default/objects/Account/fields/proj_ProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>proj_ProjectEndDate__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>