unpackaged/main/default/objects/Account/fields/proj_ProjectLink__c.field-meta.xml
<CustomField>
    <fullName>proj_ProjectLink__c</fullName>
    <label>Project Link</label>
    <type>Url</type>
</CustomField>