unpackaged/main/default/objects/Account/fields/proj_ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>proj_ProjectStartDate__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>