unpackaged/main/default/objects/Account/fields/proj_ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>proj_ProjectStatus__c</fullName>
    <description>Status related to the Project Account</description>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Budgetary Bid</fullName>
            </value>
            <value>
                <fullName>Buy Request</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Not a Project Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>