unpackaged/main/default/objects/Account/fields/proj_ProjectStatusReason__c.field-meta.xml
<CustomField>
    <fullName>proj_ProjectStatusReason__c</fullName>
    <description>Dependent on the Project Status Field. It is required by validation rule, depending on the Project Status Field.</description>
    <inlineHelpText>Please provide the reason for the Project Status.</inlineHelpText>
    <label>Project Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>proj_ProjectStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Competitor Brand</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Partially Won</fullName>
            </value>
            <value>
                <fullName>All Opportunities Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>