unpackaged/main/default/objects/Account/fields/proj_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>proj_ProjectType__c</fullName>
    <description>Used to describe the project type Should only be available for Project Layout.</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>