unpackaged/main/default/objects/Account/fields/proj_SellingSBU__c.field-meta.xml
<CustomField>
    <fullName>proj_SellingSBU__c</fullName>
    <label>Selling SBU&#39;s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBU</valueSetName>
    </valueSet>
</CustomField>