unpackaged/main/default/objects/Account/fields/proj_SummaryOpportunities__c.field-meta.xml
<CustomField>
    <fullName>proj_SummaryOpportunities__c</fullName>
    <label>Summary Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>