unpackaged/main/default/objects/Account/fields/Project_Pursuit__c.field-meta.xml
<CustomField>
    <fullName>Project_Pursuit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Pursuit</label>
    <type>Checkbox</type>
</CustomField>