unpackaged/main/default/objects/Account/fields/projPublishDate__c.field-meta.xml
<CustomField>
    <fullName>projPublishDate__c</fullName>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>