unpackaged/main/default/objects/Account/fields/PVC_Conduit_Rep__c.field-meta.xml
<CustomField>
    <fullName>PVC_Conduit_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PVC Conduit Rep</label>
    <type>Checkbox</type>
</CustomField>