unpackaged/main/default/objects/Account/fields/PVC_Fittings_Rep__c.field-meta.xml
<CustomField>
    <fullName>PVC_Fittings_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PVC Fittings Rep</label>
    <type>Checkbox</type>
</CustomField>