unpackaged/main/default/objects/Account/fields/PVC_Water_Pipe_Rep__c.field-meta.xml
<CustomField>
    <fullName>PVC_Water_Pipe_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PVC Water Pipe Rep</label>
    <type>Checkbox</type>
</CustomField>