unpackaged/main/default/objects/Account/fields/REACH_Compliance_Date__c.field-meta.xml
<CustomField>
    <fullName>REACH_Compliance_Date__c</fullName>
    <label>REACH Compliance Date</label>
    <type>Date</type>
</CustomField>