unpackaged/main/default/objects/Account/fields/REACH_Compliant__c.field-meta.xml
<CustomField>
    <fullName>REACH_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REACH Compliant</label>
    <type>Checkbox</type>
</CustomField>