unpackaged/main/default/objects/Account/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rebate</label>
    <referenceTo>Rebate__c</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>