unpackaged/main/default/objects/Account/fields/Rebate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Percentage__c</fullName>
    <label>Rebate Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>