unpackaged/main/default/objects/Account/fields/Regional_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Regional_Rebate__c</fullName>
    <formula>Rebate__r.Regional_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Rebate</label>
    <type>Text</type>
</CustomField>