unpackaged/main/default/objects/Account/fields/Regulatory_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Barriers__c</fullName>
    <description>1 = Yes
2 = No</description>
    <inlineHelpText>1 = Yes
2 = No</inlineHelpText>
    <label>Regulatory Barriers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>