unpackaged/main/default/objects/Account/fields/Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Response_Received__c</fullName>
    <label>Response Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>