unpackaged/main/default/objects/Account/fields/rhuc_Total_Closed_Won_Opportunity_Sum__c.field-meta.xml
<CustomField>
    <fullName>rhuc_Total_Closed_Won_Opportunity_Sum__c</fullName>
    <label>Total Closed Won Opportunity Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>