unpackaged/main/default/objects/Account/fields/RoHS_Compliance_Date__c.field-meta.xml
<CustomField>
    <fullName>RoHS_Compliance_Date__c</fullName>
    <label>RoHS Compliance Date</label>
    <type>Date</type>
</CustomField>