unpackaged/main/default/objects/Account/fields/RoHS_Compliant__c.field-meta.xml
<CustomField>
    <fullName>RoHS_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RoHS Compliant</label>
    <type>Checkbox</type>
</CustomField>