unpackaged/main/default/objects/Account/fields/RSM_Companies__c.field-meta.xml
<CustomField>
    <fullName>RSM_Companies__c</fullName>
    <description>Field created for List View</description>
    <formula>IF( Regional_Manager__r.Id= $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Companies</label>
    <type>Checkbox</type>
</CustomField>