unpackaged/main/default/objects/Account/fields/SABAD1__c.field-meta.xml
<CustomField>
    <fullName>SABAD1__c</fullName>
    <label>Branch Addr 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>