unpackaged/main/default/objects/Account/fields/SABAD2__c.field-meta.xml
<CustomField>
    <fullName>SABAD2__c</fullName>
    <label>Branch Addr 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>