unpackaged/main/default/objects/Account/fields/SABCOU__c.field-meta.xml
<CustomField>
    <fullName>SABCOU__c</fullName>
    <label>Branch Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>