unpackaged/main/default/objects/Account/fields/SABCTY__c.field-meta.xml
<CustomField>
    <fullName>SABCTY__c</fullName>
    <label>Branch City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>