unpackaged/main/default/objects/Account/fields/SABNAM__c.field-meta.xml
<CustomField>
    <fullName>SABNAM__c</fullName>
    <label>Branch Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>