unpackaged/main/default/objects/Account/fields/SABRID__c.field-meta.xml
<CustomField>
    <fullName>SABRID__c</fullName>
    <label>Branch Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>