unpackaged/main/default/objects/Account/fields/SABST__c.field-meta.xml
<CustomField>
    <fullName>SABST__c</fullName>
    <label>Branch State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>