unpackaged/main/default/objects/Account/fields/SABZP__c.field-meta.xml
<CustomField>
    <fullName>SABZP__c</fullName>
    <label>Branch Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>