unpackaged/main/default/objects/Account/fields/SACODE__c.field-meta.xml
<CustomField>
    <fullName>SACODE__c</fullName>
    <label>SA Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>