unpackaged/main/default/objects/Account/fields/Sales_Agency_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agency_Product_Category__c</fullName>
    <description>Product Categories serviced by Sales Agency</description>
    <inlineHelpText>Product Categories serviced by Sales Agency</inlineHelpText>
    <label>Sales Agency Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Non_Customer_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>Aikinstrut</fullName>
            </value>
            <value>
                <fullName>Cope</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Fence</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Kaftech</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Standard Pipe</fullName>
            </value>
            <value>
                <fullName>Telespar</fullName>
            </value>
            <value>
                <fullName>Unistrut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>