unpackaged/main/default/objects/Account/fields/Salesperson_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Name__c</fullName>
    <description>Salesperson Name associated with Account</description>
    <label>Salesperson Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>