unpackaged/main/default/objects/Account/fields/Salesperson_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Number__c</fullName>
    <description>Salesperson Number that is unique for each Salesperson. Imported from the CMSLMN field on the DMCUSREC table</description>
    <label>Salesperson Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>