unpackaged/main/default/objects/Account/fields/SALV01__c.field-meta.xml
<CustomField>
    <fullName>SALV01__c</fullName>
    <label>Group Level 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>