unpackaged/main/default/objects/Account/fields/SALV02__c.field-meta.xml
<CustomField>
    <fullName>SALV02__c</fullName>
    <label>Group Level 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>