unpackaged/main/default/objects/Account/fields/SALV03__c.field-meta.xml
<CustomField>
    <fullName>SALV03__c</fullName>
    <label>Group Level 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>