unpackaged/main/default/objects/Account/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steel_Conduit</fullName>
                <label>Steel Conduit</label>
            </value>
            <value>
                <fullName>Plastic_Pipe_Conduit</fullName>
                <label>Plastic Pipe &amp; Conduit</label>
            </value>
            <value>
                <fullName>Conduit Cable Fittings</fullName>
                <label>Conduit &amp; Cable Fittings</label>
            </value>
            <value>
                <fullName>Electrical Cable &amp; Flexible Conduit</fullName>
            </value>
            <value>
                <fullName>Cable Management N.A.</fullName>
            </value>
            <value>
                <fullName>Metal Framing/Cable Mgmt. N.A.</fullName>
            </value>
            <value>
                <fullName>Metal Framing/Cable Mgmt. Europe</fullName>
            </value>
            <value>
                <fullName>Metal Framing/Cable Mgmt. APAC</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Mechanical Pipe &amp; Tube</fullName>
            </value>
            <value>
                <fullName>Construction Services</fullName>
            </value>
            <value>
                <fullName>HDPE Conduit</fullName>
            </value>
            <value>
                <fullName>Electrical Boxes &amp; Enclosures</fullName>
            </value>
            <value>
                <fullName>Corrosion Resistant Conduit</fullName>
            </value>
            <value>
                <fullName>Metal Framing/Cable Mngmt. UK</fullName>
            </value>
            <value>
                <fullName>Flexible Conduit EMEA</fullName>
            </value>
            <value>
                <fullName>Pre-wired/Modular Devices</fullName>
            </value>
            <value>
                <fullName>New SBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>