unpackaged/main/default/objects/Account/fields/Segmentation_Cable__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Cable__c</fullName>
    <label>Segmentation - Cable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Driver</fullName>
            </value>
            <value>
                <fullName>Valued Partner</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Non-Partner</fullName>
            </value>
            <value>
                <fullName>Non-Partner / Opportunistic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>