unpackaged/main/default/objects/Account/fields/Settlement_Discount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Discount__c</fullName>
    <formula>Rebate__r.Settlement_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>