unpackaged/main/default/objects/Account/fields/ShippingCounty__c.field-meta.xml
<CustomField>
    <fullName>ShippingCounty__c</fullName>
    <description>Shipping County is an additional Address field that comes in from the Hoovers file in the &quot;Primary County&quot; field.</description>
    <label>Shipping County</label>
    <length>200</length>
    <type>Text</type>
</CustomField>