unpackaged/main/default/objects/Account/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>so we can sort primary item / goods.</description>
    <inlineHelpText>Describe primary item / goods.</inlineHelpText>
    <label>Short Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>