unpackaged/main/default/objects/Account/fields/SIC_Code_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_from_Lead__c</fullName>
    <label>SIC Code from Lead</label>
    <length>8</length>
    <type>Text</type>
</CustomField>