unpackaged/main/default/objects/Account/fields/SKCC_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>SKCC_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>SKCC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>