unpackaged/main/default/objects/Account/fields/Source_Country_3TG__c.field-meta.xml
<CustomField>
    <fullName>Source_Country_3TG__c</fullName>
    <label>3TG Source Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contains_3TG__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>