unpackaged/main/default/objects/Account/fields/Source_of_3TG__c.field-meta.xml
<CustomField>
    <fullName>Source_of_3TG__c</fullName>
    <label>Source of 3TG</label>
    <type>TextArea</type>
</CustomField>