unpackaged/main/default/objects/Account/fields/Sourcing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Contact__c</fullName>
    <label>Sourcing Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>