unpackaged/main/default/objects/Account/fields/Stainless_Steel_Conduit_ContractorRevenu__c.field-meta.xml
<CustomField>
    <fullName>Stainless_Steel_Conduit_ContractorRevenu__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Stainless Steel Conduit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>