unpackaged/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Please enter the State of this Company</description>
    <inlineHelpText>Please enter the State of this Company</inlineHelpText>
    <label>State</label>
    <length>45</length>
    <type>Text</type>
</CustomField>