unpackaged/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>To track what stage this M&amp;A account is in</description>
    <inlineHelpText>Indicate what stage this M&amp;A account is in</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted not currently actionable</fullName>
            </value>
            <value>
                <fullName>Identified (opportunistic or purposeful)</fullName>
            </value>
            <value>
                <fullName>Actionable within 3 years</fullName>
            </value>
            <value>
                <fullName>M&amp;A opportunity created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>