unpackaged/main/default/objects/Account/fields/Steel_Conduit_Rep__c.field-meta.xml
<CustomField>
    <fullName>Steel_Conduit_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steel Conduit Rep</label>
    <type>Checkbox</type>
</CustomField>