unpackaged/main/default/objects/Account/fields/Strategic_Customer__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Customer</label>
    <type>Checkbox</type>
</CustomField>