unpackaged/main/default/objects/Account/fields/Strategic_Fit_MA__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Fit_MA__c</fullName>
    <description>2=Sector/Product fit with an existing KST
1=Pre-Defined Opportunistic
0=Does not fit with existing Sector/Product KST</description>
    <inlineHelpText>2=Sector/Product fit with an existing KST
1=Pre-Defined Opportunistic
0=Does not fit with existing Sector/Product KST</inlineHelpText>
    <label>Strategic Fit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>