unpackaged/main/default/objects/Account/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Please enter the Street of this Company</description>
    <inlineHelpText>Please enter the Street of this Company</inlineHelpText>
    <label>Street Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>