unpackaged/main/default/objects/Account/fields/Sub_Brands_String_Format__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brands_String_Format__c</fullName>
    <label>Sub Brands (String Format)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>